Add home background layout

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <title>Personal-Website</title>
 </head>
 <body>
+    <section id="home" class="container">
+        <div id="overlay"></div>
+    </section>
 <script src="./assets/js/index.js"></script>
 </body>
 </html>
