Add the nav bar

--- a/index.html
+++ b/index.html
@@ -11,8 +11,20 @@
 </head>
 <body>
     <section id="home" class="container">
-        <div id="overlay"></div>
+        <div id="overlay">
+            <nav>
+               <label for="" class="logo">TABZ</label>
+               <UL>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Blog</a></li>
+               </UL>
+               <button class="cv">Download CV</button>
+            </nav>
+        </div>
     </section>
+
 <script src="./assets/js/index.js"></script>
 </body>
 </html>
