Add the home section

--- a/index.html
+++ b/index.html
@@ -1,30 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Arima' rel='stylesheet'>
     <link rel="stylesheet" href="./assets/css/index.css">
     <title>Personal-Website</title>
 </head>
+
 <body>
     <section id="home" class="container">
         <div id="overlay">
             <nav>
-               <label for="" class="logo">TABZ</label>
-               <UL>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Blog</a></li>
-               </UL>
-               <button class="cv">Download CV</button>
+                <label for="" class="logo">TABZ</label>
+                <UL>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Blog</a></li>
+                </UL>
+                <button class="cv">Download CV <i class="fa fa-download"></i>
+                </button>
             </nav>
+
+            <div class="homeSec">
+                <article>FullStack Developer</article>
+                <H1>Hey! I am Tabitha Muriithi
+                </H1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error excepturi minus praesentium quam ea
+                    harum odio asperiores temporibus? Id enim magni similique quod vitae accusantium debitis repudiandae
+                    minima ad at.</p>
+            </div>
         </div>
     </section>
 
-<script src="./assets/js/index.js"></script>
+    <script src="./assets/js/index.js"></script>
 </body>
+
 </html>
