Style the home section

--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
 
             <div class="homeSec">
                 <article>FullStack Developer</article>
-                <H1>Hey! I am Tabitha Muriithi
-                </H1>
+                <h1>Hey! I am Tabitha Muriithi
+                </h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error excepturi minus praesentium quam ea
                     harum odio asperiores temporibus? Id enim magni similique quod vitae accusantium debitis repudiandae
                     minima ad at.</p>
+                    <button>Projects</button>
             </div>
         </div>
     </section>
