Style the about sec

--- a/index.html
+++ b/index.html
@@ -34,9 +34,26 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error excepturi minus praesentium quam ea
                     harum odio asperiores temporibus? Id enim magni similique quod vitae accusantium debitis repudiandae
                     minima ad at.</p>
-                    <button>Projects</button>
+                <button>Projects</button>
             </div>
         </div>
+    </section>
+
+
+    <!-- ABOUT ME -->
+    <section id="about">
+        <h1>ABOUT ME</h1>
+        <div class="aboutSec">
+        <div class="image">
+            <img src="./assets/images/serviceBg.jpg" alt="" width="300">
+        </div>
+        <div class="aboutCont">
+            
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ex aliquid odio praesentium pariatur
+                voluptatem nihil, accusantium placeat eum non reprehenderit sunt laudantium voluptas eligendi.
+                Voluptates modi aliquid voluptatem molestiae.</p>
+        </div>
+    </div>
     </section>
 
     <script src="./assets/js/index.js"></script>
