Style about section

--- a/index.html
+++ b/index.html
@@ -52,7 +52,23 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ex aliquid odio praesentium pariatur
                 voluptatem nihil, accusantium placeat eum non reprehenderit sunt laudantium voluptas eligendi.
                 Voluptates modi aliquid voluptatem molestiae.</p>
+                <div class="flex-items">
+                    <div class="flex flex-1" >
+                        <h4>Location</h4>
+                        <p>Nairobi, KENYA</p>
+                    </div>
+                    <div class="flex flex-2">
+                        <h4>Experience</h4>
+                        <p>5+ Years</p>
+                    </div>
+                    <div class="flex flex-3">
+                        <h4>Specialization</h4>
+                        <p>FullStack Dev</p>
+                    </div>
+                </div>
+                <button class="cv">Download CV <i class="fa fa-download"></i></button>
         </div>
+        
     </div>
     </section>
 
