--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
     <section id="about">
         <h1>ABOUT ME</h1>
         <div class="aboutSec">
-        <div class="image">
-            <img src="./assets/images/serviceBg.jpg" alt="" width="300">
-        </div>
-        <div class="aboutCont">
-            
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ex aliquid odio praesentium pariatur
-                voluptatem nihil, accusantium placeat eum non reprehenderit sunt laudantium voluptas eligendi.
-                Voluptates modi aliquid voluptatem molestiae.</p>
+            <div class="image">
+                <img src="./assets/images/serviceBg.jpg" alt="" width="300">
+            </div>
+            <div class="aboutCont">
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ex aliquid odio praesentium pariatur
+                    voluptatem nihil, accusantium placeat eum non reprehenderit sunt laudantium voluptas eligendi.
+                    Voluptates modi aliquid voluptatem molestiae.</p>
                 <div class="flex-items">
-                    <div class="flex flex-1" >
+                    <div class="flex flex-1">
                         <h4>Location</h4>
                         <p>Nairobi, KENYA</p>
                     </div>
@@ -67,9 +67,47 @@
                     </div>
                 </div>
                 <button class="cv">Download CV <i class="fa fa-download"></i></button>
+            </div>
         </div>
-        
-    </div>
+
+
+        <!-- WORKING PROCESS -->
+        <div class="work">
+            <h1>MY WORKING PROCESS</h1>
+            <div class="cardsSec">
+            <div class="cards">
+                <img src="./assets/images/design2.png" alt="" width="250" >
+                <h3>User Centered Design</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam quod doloribus atque laudantium ea
+                    accusamus molestiae minus dolore sit cum, odit, ullam omnis, quaerat mollitia corporis ad maiores
+                    obcaecati. Eos.</p>
+            </div>
+            <svg width="109" height="22" viewBox="0 0 109 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 20C59.3359 -20.6356 107 20 107 20M107 20C107 20 96.42 14.9232 89 20M107 20L98 1"
+                    stroke="#A01E3F" />
+            </svg>
+
+            <div class="cards">
+                <img src="./assets/images/agile.png" alt="">
+                <h3>Scrum and Agile </h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam quod doloribus atque laudantium ea
+                    accusamus molestiae minus dolore sit cum, odit, ullam omnis, quaerat mollitia corporis ad maiores
+                    obcaecati. Eos.</p>
+            </div>
+            <svg width="109" height="22" viewBox="0 0 109 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 20C59.3359 -20.6356 107 20 107 20M107 20C107 20 96.42 14.9232 89 20M107 20L98 1"
+                    stroke="#A01E3F" />
+            </svg>
+
+            <div class="cards">
+                <img src="./assets/images/contin.png" alt="" width="200">
+                <h3>Continuous intergrition</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam quod doloribus atque laudantium ea
+                    accusamus molestiae minus dolore sit cum, odit, ullam omnis, quaerat mollitia corporis ad maiores
+                    obcaecati. Eos.</p>
+            </div>
+        </div>
+        </div>
     </section>
 
     <script src="./assets/js/index.js"></script>
