Style the work process section

--- a/index.html
+++ b/index.html
@@ -79,32 +79,23 @@
                 <img src="./assets/images/design2.png" alt="" width="250" >
                 <h3>User Centered Design</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam quod doloribus atque laudantium ea
-                    accusamus molestiae minus dolore sit cum, odit, ullam omnis, quaerat mollitia corporis ad maiores
-                    obcaecati. Eos.</p>
+                    accusamus molestiae minus dolore sit cum, odit, </p>
             </div>
-            <svg width="109" height="22" viewBox="0 0 109 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M1 20C59.3359 -20.6356 107 20 107 20M107 20C107 20 96.42 14.9232 89 20M107 20L98 1"
-                    stroke="#A01E3F" />
-            </svg>
+           <img class="arrows" src="./assets/images/Vector 1.svg" alt="" srcset="">
 
             <div class="cards">
-                <img src="./assets/images/agile.png" alt="">
+                <img src="./assets/images/agile.png" alt="" width="120">
                 <h3>Scrum and Agile </h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam quod doloribus atque laudantium ea
-                    accusamus molestiae minus dolore sit cum, odit, ullam omnis, quaerat mollitia corporis ad maiores
-                    obcaecati. Eos.</p>
+                    accusamus molestiae minus dolore sit cum, odit,</p>
             </div>
-            <svg width="109" height="22" viewBox="0 0 109 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M1 20C59.3359 -20.6356 107 20 107 20M107 20C107 20 96.42 14.9232 89 20M107 20L98 1"
-                    stroke="#A01E3F" />
-            </svg>
+            <img class="arrows" src="./assets/images/Vector 1.svg" alt="" srcset="">
 
             <div class="cards">
-                <img src="./assets/images/contin.png" alt="" width="200">
+                <img src="./assets/images/contin.png" alt="" width="100">
                 <h3>Continuous intergrition</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam quod doloribus atque laudantium ea
-                    accusamus molestiae minus dolore sit cum, odit, ullam omnis, quaerat mollitia corporis ad maiores
-                    obcaecati. Eos.</p>
+                    accusamus molestiae minus dolore sit cum, odit,</p>
             </div>
         </div>
         </div>
