Add the services section

--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
         </div>
     </section>
 
+    <!-- MY services -->
+    <section class="services">
+        <div class="overlay"></div>
+    </section>
+
     <script src="./assets/js/index.js"></script>
 </body>
 
