Style the services section

--- a/index.html
+++ b/index.html
@@ -75,35 +75,65 @@
         <div class="work">
             <h1>MY WORKING PROCESS</h1>
             <div class="cardsSec">
-            <div class="cards">
-                <img src="./assets/images/design2.png" alt="" width="250" >
-                <h3>User Centered Design</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam quod doloribus atque laudantium ea
-                    accusamus molestiae minus dolore sit cum, odit, </p>
-            </div>
-           <img class="arrows" src="./assets/images/Vector 1.svg" alt="" srcset="">
+                <div class="cards">
+                    <img src="./assets/images/design2.png" alt="" width="250">
+                    <h3>User Centered Design</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam quod doloribus atque laudantium
+                        ea
+                        accusamus molestiae minus dolore sit cum, odit, </p>
+                </div>
+                <img class="arrows" src="./assets/images/Vector 1.svg" alt="" srcset="">
 
-            <div class="cards">
-                <img src="./assets/images/agile.png" alt="" width="120">
-                <h3>Scrum and Agile </h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam quod doloribus atque laudantium ea
-                    accusamus molestiae minus dolore sit cum, odit,</p>
-            </div>
-            <img class="arrows" src="./assets/images/Vector 1.svg" alt="" srcset="">
+                <div class="cards">
+                    <img src="./assets/images/agile.png" alt="" width="120">
+                    <h3>Scrum and Agile </h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam quod doloribus atque laudantium
+                        ea
+                        accusamus molestiae minus dolore sit cum, odit,</p>
+                </div>
+                <img class="arrows" src="./assets/images/Vector 1.svg" alt="" srcset="">
 
-            <div class="cards">
-                <img src="./assets/images/contin.png" alt="" width="100">
-                <h3>Continuous intergrition</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam quod doloribus atque laudantium ea
-                    accusamus molestiae minus dolore sit cum, odit,</p>
+                <div class="cards">
+                    <img src="./assets/images/contin.png" alt="" width="100">
+                    <h3>Continuous intergrition</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam quod doloribus atque laudantium
+                        ea
+                        accusamus molestiae minus dolore sit cum, odit,</p>
+                </div>
             </div>
-        </div>
         </div>
     </section>
 
     <!-- MY services -->
     <section class="services">
-        <div class="overlay"></div>
+        <div class="overlay">
+            <h1>SERVICES</h1>
+            <h4>Recognition & Accomplishments</h4>
+            <div class="gridItems">
+                <div class="grid">
+                <h3>Web Design</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis voluptas eveniet sapiente
+                    assumenda earum, sed eius  </p>
+                </div>
+                <div class="grid">
+                    <h3>Product Design</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis voluptas eveniet sapiente
+                        assumenda earum, sed eius  </p>
+                </div>
+                <div class="grid">
+                    <h3>UI/UX Design</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis voluptas eveniet sapiente
+                        assumenda earum, sed eius  </p>
+                </div>
+                <div class="grid">
+                    <h3>Art Direction</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis voluptas eveniet sapiente
+                        assumenda earum, sed eius  </p>
+                </div>
+                
+            </div>
+            <button><a href="">View My Work</a></button>
+        </div>
     </section>
 
     <script src="./assets/js/index.js"></script>
