Add contact sction

--- a/index.html
+++ b/index.html
@@ -136,6 +136,31 @@
         </div>
     </section>
 
+    <section class="contact">
+        <form action="">
+            <h1>CONTACT ME</h1>
+            <div class="inputs">
+                <input type="text" name="" id="name" placeholder="Enter your Name">
+            </div>
+            <div class="inputs">
+                <input type="email" id="email" placeholder="Enter your Email">
+            </div>
+            <div class="inputs">
+                <input type="tel" name="tel" id="tel" placeholder="Enter your phone number">
+            </div>
+            <div class="inputs">
+                <select name="profession" id="">
+                    <option value="prof">Web Design</option>
+                    <option value="prof">WeB Dev</option>
+                    <option value="prof">Product Design</option>
+                </select>
+            </div>
+            <div class="inputs">
+                <textarea id="txtArea" rows="10" cols="70" placeholder="Enter your info"></textarea>
+            </div>
+        </form>
+    </section>
+
     <script src="./assets/js/index.js"></script>
 </body>
 
