Add social media handles

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h1>ABOUT ME</h1>
         <div class="aboutSec">
             <div class="image">
-                <img src="./assets/images/serviceBg.jpg" alt="" width="300">
+                <img src="./assets/images/janeprofile.jpeg" alt="" width="300">
             </div>
             <div class="aboutCont">
 
@@ -136,9 +136,11 @@
         </div>
     </section>
 
+    <!-- CONTACT SECTION -->
     <section class="contact">
         <form action="">
             <h1>CONTACT ME</h1>
+            <div class="inputInfo">
             <div class="inputs">
                 <input type="text" name="" id="name" placeholder="Enter your Name">
             </div>
@@ -156,9 +158,18 @@
                 </select>
             </div>
             <div class="inputs">
-                <textarea id="txtArea" rows="10" cols="70" placeholder="Enter your info"></textarea>
+                <textarea id="txtArea" rows="10" cols="75" placeholder="Enter your info"></textarea>
             </div>
+        </div>
         </form>
+
+        <div class="socials">
+            <h1>Or  reach me via</h1>
+            <a href=""><i class="fa fa-twitter" style="font-size:36px"></i></a>
+            <a href=""><i class="fa fa-instagram" style="font-size:36px"></i></a>
+           <a href=""> <i class="fa fa-whatsapp" style="font-size:36px"></i></a>
+           <a><i class="fa fa-linkedin" style="font-size:36px"></i></a>
+        </div>
     </section>
 
     <script src="./assets/js/index.js"></script>
