--- a/index.html
+++ b/index.html
@@ -165,11 +165,13 @@
 
         <div class="socials">
             <h1>Or  reach me via</h1>
+            <div class="icons">
             <a href=""><i class="fa fa-twitter" style="font-size:36px"></i></a>
             <a href=""><i class="fa fa-instagram" style="font-size:36px"></i></a>
            <a href=""> <i class="fa fa-whatsapp" style="font-size:36px"></i></a>
            <a><i class="fa fa-linkedin" style="font-size:36px"></i></a>
         </div>
+    </div>
     </section>
 
     <script src="./assets/js/index.js"></script>
